<resources>
    <string name="app_name">PDMProyecto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_inicio_sesion">Inicio Sesión</string>
    <string name="name_game">FUNMATHHELPER</string>
    <string name="txt_registrarse">REGISTRARSE</string>
    <string name="btn_txt_registro">REGISTRO</string>
    <string name="txt_operaciones">OPERACIONES</string>
    <string name="txt_misiones">MISIONES</string>
    <string name="txt_cuadro_dialogo_1">¿Qué quieres aprender hoy?</string>

    <string name="resta_title">Resta</string>

    <string name="txt_suma">Suma</string>
    <string name="txt_decenas">Decenas</string>
    <string name="txt_unidades">Unidades</string>
    <string name="indicaciones_1">Junta todas las manzanas y naranjas</string>
    <string name="btn_indicaciones_suma_1">¿Ya las contaste?</string>
    <string name="btn_indicaciones_suma_2">Descubrelo!!</string>

    <string name="txts">prueba</string>
    <string name="txt_tablas_de_multiplicar">Tablas de Multiplicar</string>
    <string name="txt_elige_una">¡Elige una!</string>
    <string name="tablas_de_multiplicar">TABLAS DE MULTIPLICAR</string>
    <string name="ejemplos">EJEMPLOS</string>
    <string name="sigue">Sigue!!</string>
    <string name="txt_division">División</string>
    <string name="txt_resta">Resta</string>
    <string name="txt_multi">Multiplicación</string>


</resources>
