<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraint_layout"
        android:background="@drawable/fondo_principal">


        <ImageView
            android:id="@+id/imview_icon_suma"
            android:layout_width="121dp"
            android:layout_height="96dp"
            android:src="@drawable/signo_suma"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="50dp" />

        <TextView
            android:id="@+id/txt_contenido_suma"
            android:layout_width="167dp"
            android:layout_height="73dp"
            android:fontFamily="@font/pacifico"
            android:text="@string/txt_suma"
            android:textColor="@color/blanco"
            android:textSize="@dimen/medium_1_50dp"
            app:layout_constraintBottom_toTopOf="@+id/imview_icon_suma"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.59"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.608" />

        <TextView
            android:id="@+id/txt_decenas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/bungee_inline"
            android:text="@string/txt_decenas"
            android:textColor="@color/naranjaBotones"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imview_icon_suma" />

        <TextView
            android:id="@+id/txt_unidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/bungee_inline"
            android:text="@string/txt_unidades"
            android:textColor="@color/naranjaBotones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.697"
            app:layout_constraintStart_toEndOf="@+id/txt_decenas"
            app:layout_constraintTop_toBottomOf="@+id/imview_icon_suma" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>