<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraint_layout"
        android:background="@drawable/fondo_principal">

        <ImageView
            android:id="@+id/personaje_principal_view"
            android:layout_width="290dp"
            android:layout_height="160dp"
            android:layout_marginTop="148dp"
            android:src="@drawable/personaje_principal"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="60dp" />

        <TextView
            android:id="@+id/text_name_aplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:text="@string/name_game"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/medium_35_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personaje_principal_view" />

        <Button
            android:id="@+id/bt_misiones"
            android:layout_width="230dp"
            android:layout_height="47dp"
            android:layout_marginTop="172dp"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:text="@string/txt_inicio_sesion"
            android:background="@color/verdeBotones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_name_aplication" />


        <ImageView
            android:id="@+id/imagePlanet1"
            android:layout_width="73dp"
            android:layout_height="68dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/planeta_tierra_boton"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="521dp" />

        <Button
            android:id="@+id/bt_registro_actividad"
            android:layout_width="230dp"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:text="@string/txt_registrarse"
            android:background="@color/verdeBotones"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_misiones"
            app:layout_constraintVertical_bias="0.058" />



        <ImageView
            android:id="@+id/imagePlanet2"
            android:layout_width="73dp"
            android:layout_height="68dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/planeta_tierra_boton"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="589dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>